# mycelium.id

./: .cursorrules  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MEMORY.md  README.md  SECURITY.md  _clean-oauth-safe.mjs  _clean-oauth.mjs  _decode-token.mjs  _email.mjs  _oauth-probe.mjs  _reset-operator.mjs  _setpw.mjs  agent-manager.js  agent-server.js  commercial-intel-discord-bot.js  discord-bot.js  discord-oauth.js  discord-outbound.js  ecosystem.config.cjs  github-oauth.js  index.js  intel-discord-bot.js  mya-router.js  node_modules  ops-discord-bot.js  orchestrator.js  owntracks-receiver.js  package-lock.json  package.json  personal-discord-bot.js  pr-review.js  publishing-discord-bot.js  registry.js  repo-manager.js  research-discord-bot.js  (+4 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
data/: verify-kcv.json  verify.db
docs/: ACCOUNT-AND-DATA.md  ACTIVITY-STREAM-DESIGN-2026-06-10.md  AGENT-NARRATION-DESIGN-2026-06-18.md  AGENT-REFLECTION-SYSTEM-SPEC-2026-06-19.md  AI-INTERFACE-OUTBOUND-HANDOFF-2026-06-04.md  AI-SETTINGS-PAGE-DESIGN-2026-06-09.md  ANCHORING-METRICS-FIX-DESIGN-2026-06-10.md  APP-SANDBOX-HARDENING-DESIGN-2026-06-16.md  ARCHITECTURE.md  AT-REST-BLINDNESS-DESIGN-2026-06-11.md  AUTH-WEB-ACCESS-HANDOFF-2026-06-19.md  (+246 more)
src-tauri/: BUILD-MAC.md  Cargo.toml  Info.plist  entitlements-child.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: Assets.car  README.md  icon.icns
src-tauri/icons/Mycelium.icon/: icon.json
src-tauri/src/: main.rs
(+1710 files in other folders)
