[package]
name = "mycelium"
version = "0.1.0"
description = "Mycelium — your private cognitive vault"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# macos-private-api enables the transparent window the glass UI shows through.
tauri = { version = "2", features = ["macos-private-api"] }
# Read remote.json (the remote-access toggle) at startup.
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
# Native NSVisualEffectView vibrancy behind the transparent webview.
window-vibrancy = "0.6"

[profile.release]
opt-level = "s"
lto = true
strip = true
